--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,9 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx4G
 mc_version=1.12.2
-forge_version=1.12.2-14.23.2.2611
-mod_version=1.1
-mappings_version=snapshot_20180204
+forge_version= 1.12.2-14.23.5.2838
+mod_version=1.2
+mappings_version=stable_39
+baubles_version=1.12-1.5.2
+jei_version=4.15.0.280
+#
