--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,10 @@ repositories {
         name = "JEI Maven"
         url = "http://dvs1.progwml6.com/files/maven"
     }
-    maven {
+    /*maven {
         name = "Hwyla Maven"
         url = "https://tehnut.info/maven"
-    }
+    }*/
     maven {
         name = "CB Maven"
         url = "http://chickenbones.net/maven"
@@ -59,13 +59,13 @@ dependencies {
         deobfProvided "mezz.jei:jei_${mc_version}:${jei_version}:api"
         // at runtime, use the full JEI jar
         runtime "mezz.jei:jei_${mc_version}:${jei_version}"
-	deobfCompile "mcp.mobius.waila:Hwyla:1.8.26-B41_1.12.2"
+	//deobfCompile "mcp.mobius.waila:Hwyla:1.8.26-B41_1.12.2"
 	deobfCompile "codechicken:CodeChickenLib:1.12.2-+:universal"
     
   deobfCompile ("morph.avaritia:Avaritia:1.12-+:universal"){
       transitive = false
   }
-  deobfCompile "vazkii.botania:Botania:+"
+  deobfCompile "vazkii.botania:Botania:r1.10-363.120"
     deobfCompile "com.azanor:Baubles:${baubles_version}"
 
 }
@@ -81,20 +81,6 @@ processResources {
         exclude 'mcmod.info'
     }
 }
-
-task signJar(type: SignJar, dependsOn: reobfJar) {
-    onlyIf {
-		project.hasProperty('keyStore')
-	}
-	keyStore = project.findProperty('keyStore')
-	alias = project.findProperty('keyStoreAlias')
-	storePass = project.findProperty('keyStorePass')
-	keyPass = project.findProperty('keyStoreKeyPass')
-	inputFile = jar.archivePath
-	outputFile = jar.archivePath
-}
-
-build.dependsOn signJar
 
 task deobfJar(type: Jar) {
     from sourceSets.main.output
