--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx4G
 mc_version=1.12.2
 forge_version= 1.12.2-14.23.5.2838
-mod_version=1.2a
+mod_version=1.3
 mappings_version=stable_39
 baubles_version=1.12-1.5.2
 jei_version=4.15.0.280
